2017-11-14 Moved "some" of the redundant code from SQL Pivot Tables to a called module. Using the ref and out attributes on calling parameters. Changed 1 LINQ report to use "let" instead of driiling down the list produced.

--- a/SHGuestsEFCore/SHGuestsEFCore.csproj
+++ b/SHGuestsEFCore/SHGuestsEFCore.csproj
@@ -183,6 +183,7 @@
     <Compile Include="DataModel\Visits.cs" />
     <Compile Include="Reporting_Modules\Grouped_Reports.cs" />
     <Compile Include="Reporting_Modules\LINQ_Reports.cs" />
+    <Compile Include="Reporting_Modules\PivotPrepandRead.cs" />
     <Compile Include="Reporting_Modules\Things.cs" />
     <Compile Include="SHGuests.cs">
       <SubType>Form</SubType>
