2017-11-15 Now pointing to production database. Corrected date in LINQ Report for questionable data.

--- a/SHGuestsEFCore/App.config
+++ b/SHGuestsEFCore/App.config
@@ -21,6 +21,9 @@
       <setting name="ConnectionString" serializeAs="String">
         <value>Server=(localdb)\MSSQLLocalDB;Database=SHGuests;Integrated Security=True;Trusted_Connection=True;</value>
       </setting>
+      <setting name="Production_Connect" serializeAs="String">
+        <value>Data Source=DESKTOP-6B15SGA\SQLEXPRESS;Initial Catalog=SHGuests;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False</value>
+      </setting>
     </SHGuestsEFCore.Properties.Settings>
   </userSettings>
 </configuration>
